--- a/app/src/main/res/layout/main_logged_in.xml
+++ b/app/src/main/res/layout/main_logged_in.xml
@@ -65,7 +65,6 @@
                 android:layout_marginStart="12dp"
                 android:text="@string/class_builder"
                 android:textColor="@color/black"
-                android:textStyle="bold"
                 android:textSize="16sp"
                 android:fontFamily="@font/urbanist_bold"
                 app:layout_constraintBaseline_toBaselineOf="@id/ic_class_builder"
@@ -92,6 +91,7 @@
                 android:src="@drawable/ic_chevron_right"
                 app:tint="@color/sub_titles_text"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
@@ -131,7 +131,6 @@
                 android:fontFamily="@font/urbanist_bold"
                 android:text="@string/teaching_mode"
                 android:textSize="16sp"
-                android:textStyle="bold"
                 android:textColor="@color/black"
                 app:layout_constraintBaseline_toBaselineOf="@id/ic_pose_library"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -156,6 +155,7 @@
                 android:layout_height="16dp"
                 android:src="@drawable/ic_chevron_right"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:tint="@color/sub_titles_text" />
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -198,7 +198,6 @@
                 android:text="@string/pose_library"
                 android:textSize="16sp"
                 android:textColor="@color/black"
-                android:textStyle="bold"
                 app:layout_constraintBaseline_toBaselineOf="@id/ic_teaching_mode"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/ic_teaching_mode" />
@@ -222,6 +221,7 @@
                 android:layout_height="16dp"
                 android:src="@drawable/ic_chevron_right"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:tint="@color/sub_titles_text" />
         </androidx.constraintlayout.widget.ConstraintLayout>
