--- a/app/src/main/res/layout/flow_view.xml
+++ b/app/src/main/res/layout/flow_view.xml
@@ -11,7 +11,7 @@
         android:id="@+id/guideline_action_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintGuide_percent="0.85"
+        app:layout_constraintGuide_percent="0.97"
         android:orientation="horizontal"/>
 
     <com.google.android.material.button.MaterialButton
@@ -30,7 +30,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="@string/ct_title"
+        android:text="@string/surya_namaskar_a"
         android:textSize="24sp"
         android:fontFamily="@font/urbanist"
         android:textStyle="bold"
@@ -55,14 +55,7 @@
             style="@style/Widget.Yogis.Chip.Info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/ct_duration"/>
-
-        <com.google.android.material.chip.Chip
-            android:id="@+id/chip_class_id"
-            style="@style/Widget.Yogis.Chip.Info"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/ct_class_id"/>
+            android:text="@string/_3_5_rounds"/>
 
         <com.google.android.material.chip.Chip
             android:id="@+id/chip_level"
@@ -87,7 +80,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:paddingStart="24dp"
-        android:paddingEnd="12dp"
+        android:paddingEnd="0dp"
         android:clipToPadding="false"
         android:scrollbars="vertical"
         android:fadeScrollbars="false"
@@ -100,30 +93,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_save"
-        style="@style/Widget.Yogis.Button.Primary"
-        android:layout_width="350dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="40dp"
-        android:text="@string/save_class"
-        android:textAllCaps="false"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/guideline_action_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.538"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <TextView
         android:id="@+id/tv_back_menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:text="@string/back_to_main_menu"
         android:textSize="14sp"
         android:fontFamily="@font/urbanist"
         android:textColor="@color/sub_titles_text"
-        app:layout_constraintTop_toBottomOf="@id/btn_save"
+        app:layout_constraintTop_toBottomOf="@id/guideline_action_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
