--- a/app/src/main/res/layout/pose_library_flows_or_poses_fam_list.xml
+++ b/app/src/main/res/layout/pose_library_flows_or_poses_fam_list.xml
@@ -65,7 +65,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/urbanist"
         android:text="@string/back_to_main_menu"
-        android:textColor="@color/black"
+        android:textColor="@color/sub_titles_text"
         android:textSize="14sp"
         app:layout_constraintTop_toBottomOf="@id/guideline_ap_action_button"
         app:layout_constraintStart_toStartOf="parent"
