--- a/app/src/main/res/layout/welcome.xml
+++ b/app/src/main/res/layout/welcome.xml
@@ -9,6 +9,14 @@
     android:padding="24dp"
     android:background="@android:color/white">
 
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_action_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintGuide_percent="0.8"
+        android:orientation="horizontal"/>
+
     <TextView
         android:id="@+id/tv_welcome"
         android:layout_width="wrap_content"
@@ -22,7 +30,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_margin="32dp"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -38,7 +45,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_margin="4dp"
         app:layout_constraintTop_toBottomOf="@id/tv_welcome" />
 
     <TextView
@@ -53,7 +59,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_margin="8dp"
         app:layout_constraintTop_toBottomOf="@id/tv_app_name" />
 
     <ImageView
@@ -65,7 +70,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_margin="32dp"
         app:layout_constraintTop_toBottomOf="@id/tv_subtitle" />
 
     <com.google.android.material.button.MaterialButton
@@ -73,10 +77,9 @@
         android:id="@+id/btn_login"
         android:layout_width="350dp"
         android:layout_height="60dp"
-        android:layout_marginTop="32dp"
         android:text="@string/login"
         android:textAllCaps="false"
-        app:layout_constraintTop_toBottomOf="@id/iv_welcome_icon"
+        app:layout_constraintTop_toBottomOf="@id/guideline_action_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -85,7 +88,7 @@
         android:id="@+id/btn_register"
         android:layout_width="350dp"
         android:layout_height="60dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
         android:text="@string/register"
         android:textAllCaps="false"
         app:layout_constraintTop_toBottomOf="@id/btn_login"
@@ -96,7 +99,7 @@
         android:id="@+id/tv_continue_guest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="18dp"
         android:clickable="true"
         android:focusable="true"
         android:fontFamily="@font/urbanist_bold"
@@ -105,7 +108,6 @@
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_margin="24dp"
         app:layout_constraintTop_toBottomOf="@id/btn_register" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
