--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,12 +2,21 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/welcomeFragment">
+    app:startDestination="@id/splashFragment">
 
-    <!-- Welcome Screen -->
+    <fragment
+        android:id="@+id/splashFragment"
+        android:name="com.tamara.a25b_11345b_yogis.ui.auth.SplashFragment" >
+        <action
+            android:id="@+id/action_splash_to_welcome"
+            app:destination="@id/welcomeFragment"
+            app:popUpTo="@id/splashFragment"
+            app:popUpToInclusive="true"/>
+    </fragment>
+
     <fragment
         android:id="@+id/welcomeFragment"
-        android:name="com.yogis.app.ui.auth.WelcomeFragment"
+        android:name="com.tamara.a25b_11345b_yogis.ui.auth.WelcomeFragment"
         android:label="Welcome" >
         <action
             android:id="@+id/action_welcome_to_login"
@@ -17,32 +26,28 @@
             app:destination="@id/registerFragment" />
     </fragment>
 
-    <!-- Login Screen -->
     <fragment
         android:id="@+id/loginFragment"
-        android:name="com.yogis.app.ui.auth.LoginFragment"
+        android:name="com.tamara.a25b_11345b_yogis.ui.auth.LoginFragment"
         android:label="Login" >
         <action
             android:id="@+id/action_login_to_main"
             app:destination="@id/mainMenuFragment" />
     </fragment>
 
-    <!-- Register Screen -->
     <fragment
         android:id="@+id/registerFragment"
-        android:name="com.yogis.app.ui.auth.RegisterFragment"
+        android:name="com.tamara.a25b_11345b_yogis.ui.auth.RegisterFragment"
         android:label="Register" >
         <action
             android:id="@+id/action_register_to_main"
             app:destination="@id/mainMenuFragment" />
     </fragment>
 
-    <!-- Main Menu -->
     <fragment
         android:id="@+id/mainMenuFragment"
-        android:name="com.yogis.app.ui.main.MainMenuFragment"
+        android:name="com.tamara.a25b_11345b_yogis.ui.main.MainMenuFragment"
         android:label="Main Menu" />
 
-    <!-- Add more fragments here as you build -->
 
 </navigation>
