--- a/app/src/main/res/layout/class_builder_actions.xml
+++ b/app/src/main/res/layout/class_builder_actions.xml
@@ -86,7 +86,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:fontFamily="@font/urbanist"
-                android:text="@string/add_new_pose"
+                android:text="@string/add_pose"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintBaseline_toBaselineOf="@id/ic_add_pose"
@@ -141,7 +141,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
-                android:text="@string/add_new_flow"
+                android:text="@string/add_flow"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:fontFamily="@font/urbanist"
@@ -167,11 +167,11 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_view_plan"
-        style="@style/Widget.Yogis.Button.Secondary"
+        style="@style/Widget.Yogis.Button.Primary"
         android:layout_width="350dp"
         android:layout_height="60dp"
         android:text="@string/view_class_plan"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textAllCaps="false"
         app:layout_constraintTop_toBottomOf="@id/guideline_action_button"
         app:layout_constraintBottom_toTopOf="@+id/tv_back_main"
