--- a/app/src/main/res/layout/class_builder_add_new_pose.xml
+++ b/app/src/main/res/layout/class_builder_add_new_pose.xml
@@ -3,102 +3,26 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/add_pose_from_library"
+    android:id="@+id/add_pose_new_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="24dp"
     android:background="@android:color/white">
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline_ap_action_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintGuide_percent="0.85"
-        android:orientation="horizontal"/>
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_ap_back"
-        style="@style/Widget.Yogis.Button.Back"
-        android:layout_width="40dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="8dp"
-        app:icon="@drawable/ic_arrow_back"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_ap_title"
-        android:layout_width="343dp"
-        android:layout_height="28dp"
-        android:layout_marginTop="32dp"
-        android:fontFamily="@font/urbanist_bold"
-        android:text="@string/add_pose"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.35"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_ap_back" />
-
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tl_add_pose_tabs"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_marginTop="24dp"
-        android:backgroundTint="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.044"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_ap_title"
-        app:tabGravity="fill"
-        app:tabIndicatorColor="@color/primary"
-        app:tabIndicatorFullWidth="true"
-        app:tabIndicatorHeight="3dp"
-        app:tabMode="fixed"
-        app:tabSelectedTextColor="@color/primary"
-        app:tabTextColor="@color/sub_titles_text">
-
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/from_library" />
-
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/set_new_pose" />
-
-    </com.google.android.material.tabs.TabLayout>
-
-    <View
-        android:layout_width="206dp"
-        android:layout_height="1dp"
-        android:background="@color/grey_200"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.044"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tl_add_pose_tabs" />
-
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scroll_region"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:scrollbars="vertical"
+        android:fillViewport="true"
         android:fadeScrollbars="false"
-        android:scrollbarSize="6dp"
+        android:scrollbars="vertical"
         android:paddingTop="4dp"
         android:paddingEnd="8dp"
-        android:layout_marginBottom="2dp"
-        android:scrollbarStyle="outsideOverlay"
-        android:scrollbarThumbVertical="@drawable/scrollbar_thumb"
-        android:scrollbarTrackVertical="@drawable/scrollbar_track"
-        app:layout_constraintTop_toBottomOf="@id/tl_add_pose_tabs"
-        app:layout_constraintBottom_toTopOf="@id/guideline_ap_action_button"
+        tools:ignore="RtlSymmetry"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:ignore="RtlSymmetry">
+        app:layout_constraintBottom_toTopOf="@+id/btn_add_pose">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -114,10 +38,12 @@
                 android:textColorHint="@color/sub_titles_text">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/et_pose_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:enabled="false"
-                    android:focusable="false"/>
+                    android:inputType="textCapWords"
+                    android:enabled="true"
+                    android:focusable="true"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -129,9 +55,11 @@
                 android:textColorHint="@color/sub_titles_text">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/et_pose_family"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:enabled="false"/>
+                    android:inputType="textCapWords"
+                    android:enabled="true"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <RadioGroup
@@ -151,7 +79,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         app:buttonTint="@color/primary"
-                        android:checked="true" />
+                        android:checked="true"/>
 
                     <com.google.android.material.textfield.TextInputLayout
                         style="@style/Widget.Yogis.TextField.Outlined"
@@ -179,8 +107,8 @@
                     <com.google.android.material.radiobutton.MaterialRadioButton
                         android:id="@+id/rb_repetitions"
                         android:layout_width="wrap_content"
-                        app:buttonTint="@color/sub_titles_text"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content"
+                        app:buttonTint="@color/primary"/>
 
                     <com.google.android.material.textfield.TextInputLayout
                         style="@style/Widget.Yogis.TextField.Outlined"
@@ -200,106 +128,79 @@
                 </LinearLayout>
             </RadioGroup>
 
-
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.Yogis.TextField.Outlined"
-                android:id="@+id/til_level"
-                android:layout_width="350dp"
+                android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginTop="12dp"
                 android:hint="@string/select_class_level"
                 android:textColorHint="@color/sub_titles_text"
-                app:endIconMode="dropdown_menu"
-                app:layout_constraintTop_toBottomOf="@id/til_duration"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent">
+                app:endIconMode="dropdown_menu">
 
                 <AutoCompleteTextView
                     android:id="@+id/ac_level"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:paddingStart="16dp"
-                    android:inputType="none"
-                    tools:ignore="LabelFor" />
+                    android:inputType="none"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.Yogis.TextField.Outlined"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="100dp"
                 android:layout_marginTop="8dp"
                 android:hint="@string/description"
+                android:gravity="top"
                 android:textColorHint="@color/sub_titles_text">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/et_description"
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:gravity="top"
+                    android:layout_height="match_parent"
                     android:inputType="textMultiLine"
-                    android:enabled="false"/>
+                    android:enabled="true"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_register"
                 style="@style/Widget.Yogis.Button.Secondary"
-                android:layout_width="350dp"
+                android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginTop="8dp"
                 android:text="@string/upload_take_photo"
-                android:textColor="@color/black"
-                android:textAllCaps="false"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.461"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/guideline_action_button"
-                tools:layout_editor_absoluteY="603dp"
-                tools:ignore="MissingConstraints" />
+                android:textAllCaps="false"/>
 
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.Yogis.TextField.Outlined"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
                 android:hint="@string/note"
                 android:textColorHint="@color/sub_titles_text">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/et_note"
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
                     android:gravity="top"
                     android:inputType="textMultiLine"
-                    android:enabled="false"/>
+                    android:enabled="true"/>
             </com.google.android.material.textfield.TextInputLayout>
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
-
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_start"
+        android:id="@+id/btn_add_pose"
         style="@style/Widget.Yogis.Button.Primary"
-        android:layout_width="350dp"
+        android:layout_width="0dp"
         android:layout_height="60dp"
+        android:layout_marginTop="8dp"
         android:text="@string/add_pose"
         android:textAllCaps="false"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.538"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/guideline_ap_action_button"
-        tools:ignore="MissingConstraints" />
-
-    <TextView
-        android:id="@+id/tv_back_menu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="@string/back_to_main_menu"
-        android:textSize="14sp"
-        android:fontFamily="@font/urbanist"
-        android:textColor="@color/sub_titles_text"
-        app:layout_constraintTop_toBottomOf="@id/btn_start"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
