--- a/app/src/main/res/layout/item_pose.xml
+++ b/app/src/main/res/layout/item_pose.xml
@@ -12,7 +12,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:padding="16dp">
+        android:padding="16dp"
+        app:strokeColor="@color/white">
 
         <ImageView
             android:id="@+id/iv_level_mark"
